[BE][Fix] 알림 전송 시 탈퇴 회원 고려